Agregue suscripción, cambie la cabecera maestra y puse todo azul

--- a/blogpost.html
+++ b/blogpost.html
@@ -11,7 +11,7 @@
         <div id="cabecera">
             Hyperblog
             <span id="tagline">
-                Tu blog de confianza
+                Tu blog de maestro
             </span>
         </div>
         <div id="post">
@@ -19,6 +19,7 @@
             <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increéibles que se pueden hhacer con ramas.</p>
             <p>Los blog son la mejor forma de compartir información y tus ideas.
             Mucho mas que ir a conferencia o salir en Youtube. Ecepto si eres un rockstar. Pero estadísticamente no lo eres.... por ahora.</p>
+            <p>suscribete y dale like</p>
         </div>
     </div>
 </body>
