color de fondo, logo nuevo y mejor color de header

--- a/blogpost.html
+++ b/blogpost.html
@@ -9,6 +9,7 @@
 </head>
     <div id="container">
         <div id="cabecera">
+            <img id="logo" src="images/dragon.png" alt="navecita dragon">
             Hyperblog
             <span id="tagline">
                 Tu blog de cabecera
