--- a/blogpost.html
+++ b/blogpost.html
@@ -17,7 +17,7 @@
         </div>
         <div id="post">
             <h1>Este es el título atractivo e interesante del post</h1>
-            <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increéibles que se pueden hhacer con ramas.</p>
+            <p>Y este es el párrafo de inicio donde vamos a explicar las cosas increíbles que se pueden hhacer con ramas.</p>
             <p>Los blog son la mejor forma de compartir información y tus ideas.
             Mucho mas que ir a conferencia o salir en Youtube. Ecepto si eres un rockstar. Pero estadísticamente no lo eres.... por ahora.</p>
             <p>suscribete y dale like</p>
