--- a/blogpost.html
+++ b/blogpost.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/estilos.css" />
-    <title>Bienvenido a Hyperblog 2.0</title>
+    <title>Bienvenido a Hyperblog 2.0 es un blog del futuro</title>
 </head>
     <div id="container">
         <div id="cabecera">
@@ -16,7 +16,7 @@
             </span>
         </div>
         <div id="post">
-            <h1>Este es el título atractivo e interesante del post</h1>
+            <h1>Aqu&iacute; inicia la historia de un gran proyecto</h1>
             <p>Y este es el p&aacute;rrafo de inicio donde vamos a explicar las cosas incre&iacute;bles que se pueden hhacer con ramas.</p>
             <p>Los blog son la mejor forma de compartir información y tus ideas.
             Mucho mas que ir a conferencia o salir en Youtube. Ecepto si eres un rockstar. Pero estadísticamente no lo eres.... por ahora.</p>
